--- a/index.html
+++ b/index.html
@@ -768,6 +768,7 @@
       and is not related, linked or interconnected in whatsoever manner or nature, to “GROFFR.COM” which is a real
       estate services business operated by “Redstone Consultancy Services Private Limited”.
     </div>
+    <div id="project_designer"> <p>Made with ❤️ by Ravi Kumar Yedla <i class="fa-solid fa-champagne-glasses"></i></p></div>
   </footer>
 </body>
 
